[project]
name = "ml-impl-insights"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki-yoshimura",email = "4b19dbly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ml_impl_insights", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
